# MCS

./: CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt  base.cpp  base.h  io.cpp  io.h  utils.hpp
data/KITTI/00/gt/: gt_poses.txt  loop_nn.txt
data/KITTI/00/map/: cnts_4_20_60_3.txt  map_ring_keys_4_20_60_3.txt
data/KITTI/02/gt/: gt_poses.txt  loop_nn.txt
data/KITTI/02/map/: cnts_4_20_60_3.txt  map_ring_keys_4_20_60_3.txt
data/KITTI/05/gt/: gt_poses.txt  loop_nn.txt
data/KITTI/05/map/: cnts_4_20_60_3.txt  map_ring_keys_4_20_60_3.txt
data/KITTI/06/gt/: gt_poses.txt  loop_nn.txt
data/KITTI/06/map/: cnts_4_20_60_3.txt  ground_sam_dist_3.pcd  map_ring_keys_4_20_60_3.txt  map_sam_pro.pcd
data/KITTI/07/gt/: gt_poses.txt  loop_nn.txt
data/KITTI/07/map/: cnts_4_20_60_3.txt  map_ring_keys_4_20_60_3.txt
data/KITTI/08/gt/: gt_poses.txt  loop_nn.txt
data/KITTI/08/map/: cnts_4_20_60_3.txt  map_ring_keys_4_20_60_3.txt
descriptor/: CMakeLists.txt  cluster.cpp  cluster.h  ocsc.cpp  ocsc.h
ground/: CMakeLists.txt  bin.cpp  bin.h  ground_segmentation.cpp  ground_segmentation.h  segment.cpp  segment.h
offline_map_process/: CMakeLists.txt  create_map_cluster_centers.cpp  create_virtual_pts_and_map.cpp  k_means.m
offline_map_process/cluster/: CMakeLists.txt  k_means.cpp  k_means.h
online_place_recognition/: CMakeLists.txt  run_mcs_bf_recall_top1.cpp  run_mcs_recall_top1.cpp
