SET(LIB_NAME mcs_cluster)
SET(LIB_NAME_UPPER MCS_CLUSTER)

# aux_source_directory(./k_means ${LIB_NAME_UPPER}_SRC)
set(${LIB_NAME_UPPER}_SRC k_means.cpp)

SET(${LIB_NAME_UPPER}_LIB ${LIB_NAME} CACHE INTERNAL "lib")

ADD_LIBRARY(${${LIB_NAME_UPPER}_LIB} SHARED 
            ${${LIB_NAME_UPPER}_SRC})

TARGET_LINK_LIBRARIES(${${LIB_NAME_UPPER}_LIB} 
                       ${PCL_LIBRARIES})